--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "micromatch": "^4.0.2",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/micromatch": "^4.0.1",
     "nodemon": "^2.0.3"
   }
 }
