--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
         "module": "commonjs",
         "outDir": "dist",
         "rootDir": "src",
-        "target": "ES6"
+        "target": "ES6",
     },
     "exclude": [
         "node_modules"
-    ]
+    ],
 }
