--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/micromatch": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
     "nodemon": "^2.0.3"
   }
 }
